--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "webpack": "^5.3.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1"
