--- a/package.json
+++ b/package.json
@@ -25,15 +25,22 @@
   "targets": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "favicons": "^6.2.1",
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
+    "prettier-webpack-plugin": "^1.2.0",
     "sass-loader": "^11.0.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.5.0",
